Closes-Bug: #1691064  -- Monitor Alarms, Alarms status icon is misaligned.
The alarm status is misaligned. It should be vertically middle.

--- a/webroot/common/ui/css/contrail.controller.css
+++ b/webroot/common/ui/css/contrail.controller.css
@@ -571,3 +571,6 @@ table td[class*="col-xs-"], table th[class*="col-xs-"], .row-fluid table td[clas
     margin-bottom: 5px;
     border: none;
     }
+#monitor-alarms-grid .alarms-circle-display-flex{
+ display:inline-block;
+    }
